[gd_scene load_steps=15 format=2]

[ext_resource path="res://Shaders/grayscale.shader" type="Shader" id=1]
[ext_resource path="res://Image-assets/title blue-no-text.png" type="Texture" id=3]
[ext_resource path="res://Image-assets/close_button.png" type="Texture" id=4]
[ext_resource path="res://Scenes/product.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/supervisorPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Image-assets/main-frame-bottom-split.png" type="Texture" id=9]
[ext_resource path="res://Image-assets/main frame.png" type="Texture" id=10]
[ext_resource path="res://Scripts/bakery.gd" type="Script" id=11]
[ext_resource path="res://Fonts/main_font.tres" type="DynamicFont" id=12]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/grayscale = false

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 1 )
shader_param/grayscale = false

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Theme" id=5]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 4 )
VScrollBar/styles/scroll_focus = null

[node name="bakeryAvalonia" type="Panel"]
margin_left = -1.48785
margin_top = 58.2818
margin_right = 429.512
margin_bottom = 758.282
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 375.994, 55.4781 ]
}

[node name="bakeryBgkr" type="Sprite" parent="."]
position = Vector2( 217.356, 314.904 )
texture = ExtResource( 10 )

[node name="bakeryBtn" type="TextureButton" parent="."]
material = SubResource( 2 )
margin_left = 27.9174
margin_top = 36.8285
margin_right = 214.917
margin_bottom = 80.8285
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="bakeryBtn"]
anchor_left = 0.254011
anchor_top = 0.238636
anchor_right = 0.745989
anchor_bottom = 0.625
margin_left = -3.8147e-06
rect_pivot_offset = Vector2( 101.016, -35.2296 )
custom_fonts/font = ExtResource( 12 )
text = "BAKERY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="supervisorsBtn" type="TextureButton" parent="."]
material = SubResource( 3 )
margin_left = 212.461
margin_top = 37.0006
margin_right = 399.461
margin_bottom = 81.0006
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="supervisorsBtn"]
anchor_left = 0.254011
anchor_top = 0.238636
anchor_right = 0.745989
anchor_bottom = 0.625
margin_left = -3.8147e-06
rect_pivot_offset = Vector2( 101.016, -35.2296 )
custom_fonts/font = ExtResource( 12 )
text = "SUPERVISORS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="close_bakery" type="TextureButton" parent="."]
margin_left = 371.953
margin_top = -13.2315
margin_right = 418.953
margin_bottom = 28.7685
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="productScroll" type="ScrollContainer" parent="."]
margin_left = 57.0
margin_top = 114.0
margin_right = 375.0
margin_bottom = 569.0
theme = SubResource( 5 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="productScroll"]
margin_bottom = 700.0
rect_min_size = Vector2( 0, 700 )
custom_constants/separation = 100

[node name="breadControl" type="Control" parent="productScroll/VBoxContainer"]

[node name="breadAvalonia" parent="productScroll/VBoxContainer/breadControl" instance=ExtResource( 6 )]
targetProduct = "breadAvalonia"

[node name="productName" parent="productScroll/VBoxContainer/breadControl/breadAvalonia" index="0"]
text = "Bread"

[node name="cookieControl" type="Control" parent="productScroll/VBoxContainer"]
margin_top = 100.0
margin_bottom = 100.0

[node name="cookieAvalonia" parent="productScroll/VBoxContainer/cookieControl" instance=ExtResource( 6 )]
targetProduct = "cookieAvalonia"

[node name="productName" parent="productScroll/VBoxContainer/cookieControl/cookieAvalonia" index="0"]
text = "Cookie"

[node name="main-frame-bottom-split" type="Sprite" parent="."]
position = Vector2( 210.527, 545.49 )
texture = ExtResource( 9 )

[node name="supervisorPanel" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = 23.2608
margin_top = 74.3438
margin_right = 401.261
margin_bottom = 583.344

[node name="supervisor" parent="supervisorPanel/GridContainer/vbox" index="0"]
supervisor = "breadBakAvaS"
productControl = "breadControl"
targetVillage = "villageAvalonia"

[node name="supervisor2" parent="supervisorPanel/GridContainer/vbox" index="1"]
supervisor = "cookieBakAvaS"
productControl = "cookieControl"
targetVillage = "villageAvalonia"
[connection signal="pressed" from="bakeryBtn" to="." method="_on_bakeryBtn_pressed"]
[connection signal="pressed" from="supervisorsBtn" to="." method="_on_supervisorsBtn_pressed"]
[connection signal="pressed" from="close_bakery" to="." method="_on_close_bakery_pressed"]

[editable path="productScroll/VBoxContainer/breadControl/breadAvalonia"]

[editable path="productScroll/VBoxContainer/cookieControl/cookieAvalonia"]

[editable path="supervisorPanel"]
